fix: add missing background color to components

--- a/src/components/AdminPanel/Header/AdminHeader.module.css
+++ b/src/components/AdminPanel/Header/AdminHeader.module.css
@@ -8,6 +8,7 @@
   flex-direction: row;
   align-items: center;
   padding: 35px 80px 35px 20px;
+  background-color: #FCFCFC;
 }
 
 .header__heading {
